# openidea

cppdev-main/: .gitignore  .gitmodules  CMakeLists.txt  README.md
cppdev-main/cbaselib/: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  Readme.md  vimrc
cppdev-main/cbaselib/base/: CMakeLists.txt
cppdev-main/cbaselib/base/inc/: bytes.h  bytes_stream.h  config.h  file_helper.h  fileio.h  serialize.h  spin_lock.h  task.h  threadpool.h  timer_task.h
cppdev-main/cbaselib/base/src/: bytes.cpp  bytes_stream.cpp  config.cpp  file_helper.cpp  spin_lock.cpp  threadpool.cpp  timer_task.cpp
cppdev-main/cbaselib/include/: base_header.h  header.h  net_header.h
cppdev-main/cbaselib/logger/: CMakeLists.txt
cppdev-main/cbaselib/logger/inc/: log_client.h  log_client_session.h  log_parser.h  log_proto_stubs.h  log_protocol.h  logger.h
cppdev-main/cbaselib/logger/src/: log_client.cpp  log_client_session.cpp  log_parser.cpp  log_protocol.cpp  logger.cpp
cppdev-main/cbaselib/net/: CMakeLists.txt
cppdev-main/cbaselib/net/inc/: accept_channel.h  channel.h  connect_channel.h  net_channel.h  net_helper.h  net_session.h  net_socket.h  parser.h  poll.h  session.h  session_manager.h  ssl_channel.h  tcp_channel.h
cppdev-main/cbaselib/net/src/: accept_channel.cpp  channel.cpp  connect_channel.cpp  net_channel.cpp  net_helper.cpp  net_session.cpp  net_socket.cpp  poll.cpp  session.cpp  session_manager.cpp  ssl_channel.cpp  tcp_channel.cpp
cppdev-main/cbaselib/proto/: CMakeLists.txt
cppdev-main/cbaselib/proto/inc/: proto_session.h  proto_session_manager.h  proto_stub_manager.h  protocol.h  rpc.h
cppdev-main/cbaselib/proto/proto_tool/: common.py  component_file_gen.py  gen_file.py  main.py  module_data_parse.py  module_file_gen.py  proto_parse.py  serialize_data_file_gen.py  serialize_data_parse.py
cppdev-main/cbaselib/proto/proto_tool/config/: module.xml  module_component.xml  proto.xml
cppdev-main/cbaselib/proto/src/: parser.cpp  proto_session.cpp  proto_session_manager.cpp  proto_stub_manager.cpp  rpc.cpp
cppdev-main/cbaselib/test/: CMakeLists.txt
cppdev-main/cbaselib/test/deploy/config/: test.toml
cppdev-main/cbaselib/test/inc/: test_log.h  test_net.h  testclient.h
cppdev-main/cbaselib/test/include/: testdata  testdatareq  testdatares  testprotocol  testprotocol2  testreq  testres  testrpc
cppdev-main/cbaselib/test/protocol/: testprotocol.hpp  testprotocol2.hpp  testrpc.hrp
cppdev-main/cbaselib/test/src/: main.cpp  proto_stub.cpp  test_common_bytes.cpp  test_log.cpp  test_net.cpp  test_timer.cpp  testclient.cpp  testserver.cpp
cppdev-main/cbaselib/timer/: CMakeLists.txt  README.md  timer.mk
cppdev-main/cbaselib/timer/inc/: base_timer.h  base_timer_helper.h  base_timer_level.h  base_timer_manager.h
cppdev-main/cbaselib/timer/src/: base_timer.cpp  base_timer_helper.cpp  base_timer_level.cpp  base_timer_manager.cpp
cppdev-main/deploy/config/: logd.toml  test.toml
cppdev-main/modules/logd/: CMakeLists.txt
cppdev-main/modules/logd/inc/: log_file_instance.h  log_manager.h  log_server.h  log_server_session.h
cppdev-main/modules/logd/src/: log_file_instance.cpp  log_manager.cpp  log_proto_stubs.cpp  log_protocol.cpp  log_server.cpp  log_server_session.cpp  main.cpp  proto_stub.cpp
cppdev-main/modules/test/: CMakeLists.txt
cppdev-main/modules/test/inc/: test_common_bytes.h  test_timer.h  testserver.h
cppdev-main/modules/test/protocol/: testdata.hrp
cppdev-main/modules/test/src/: main.cpp  test_net.cpp  test_timer.cpp  testclient.cpp  testserver.cpp
cppdev-main/modules/xmlconfig/: module.xml  module_component.xml  proto.xml
